# digimag

./: .gitignore  Makefile  README  autogen.sh  configure.ac
src/: Makefile.am  config.c  config.h  main.c
win32/: makefile.win32
